--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,9 +31,14 @@ add_subdirectory(cmake/modules)
 
 add_dune_alberta_flags(WORLDDIM 2 masterarbeit)
 if(OpenMP_FOUND)
-  target_link_libraries(masterarbeit PUBLIC OpenMP::OpenMP_CXX)
+	target_link_libraries(masterarbeit PUBLIC OpenMP::OpenMP_CXX)
 endif()
 target_compile_options(masterarbeit PRIVATE -fconcepts)
+target_compile_options(masterarbeit PRIVATE -std=c++20)
+target_compile_options(masterarbeit PRIVATE -O2)
+target_compile_options(masterarbeit PRIVATE -flto=auto)
+target_compile_options(masterarbeit PRIVATE -mtune=native)
+target_link_options(masterarbeit PRIVATE -flto=auto)
 
 # finalize the dune project, e.g. generating config.h etc.
 finalize_dune_project(GENERATE_CONFIG_H_CMAKE)
